--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <title>BYEOL OH</title>
 
      <!-- <script src="/node_modules/flowbite/dist/flowbite.js"></script>  -->
-     <script src="flowbite/dist/flowbite.bundle.js"></script>
+     <!-- <script src="flowbite/dist/flowbite.bundle.js"></script> -->
      <script>
       // On page load or when changing themes, best to add inline in `head` to avoid FOUC
       if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
